--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
+      "@styles/*": ["src/styles/*"],
+      "@icons/*": ["src/icons/*"],
     }
   }
 }
