--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
       "@styles/*": ["src/styles/*"],
+      "@assets/*": ["src/assets/*"],
       "@icons/*": ["src/icons/*"]
     },
     "jsx": "react-jsx",
