--- a/package.json
+++ b/package.json
@@ -6,23 +6,30 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "bun run ./db/seed.ts",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/db": "^0.14.5",
     "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vercel": "^8.0.1",
+    "@libsql/client": "^0.14.0",
     "@splidejs/splide": "^4.1.4",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.1.2",
+    "drizzle-orm": "^0.38.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "daisyui": "^4.12.23"
+    "daisyui": "^4.12.23",
+    "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.1"
   }
 }
