--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "drizzle-orm": "^0.38.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "redis": "^4.7.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/redis": "^4.0.11",
     "daisyui": "^4.12.23",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.1"
