--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^5.1.2",
     "color": "^4.2.3",
     "drizzle-orm": "^0.38.3",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^4.7.0",
