--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "^9.0.1",
-    "@astrojs/react": "^4.1.2",
-    "@astrojs/tailwind": "^5.1.4",
-    "@astrojs/vercel": "^8.0.2",
+    "@astrojs/node": "9.0.2",
+    "@astrojs/react": "4.2.0",
+    "@astrojs/tailwind": "6.0.0",
+    "@astrojs/vercel": "8.0.5",
     "@libsql/client": "^0.14.0",
     "@splidejs/splide": "^4.1.4",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
-    "astro": "^5.1.2",
+    "astro": "5.2.1",
     "color": "^4.2.3",
     "drizzle-orm": "^0.38.3",
     "moment": "^2.30.1",
