--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@splidejs/splide": "^4.1.4",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
+    "antd": "^5.23.3",
     "astro": "5.2.1",
     "color": "^4.2.3",
     "drizzle-orm": "^0.38.3",
