--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^4.7.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "uuidv7": "^1.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
