lucia auth with redis

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,10 @@
       "@scripts/*": ["src/scripts/*"],
       "@styles/*": ["src/styles/*"],
       "@assets/*": ["src/assets/*"],
+      "@config/*": ["src/config/*"],
       "@models/*": ["db/models/*"],
       "@utils/*": ["src/utils/*"],
+      "@libs/*": ["src/libs/*"],
       "@db/*": ["db/*"],
     },
     "jsx": "react-jsx",
