--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "astro": "5.2.1",
     "color": "^4.2.3",
     "drizzle-orm": "^0.38.3",
+    "lucia": "^3.2.2",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
