--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^19.0.3",
     "antd": "^5.23.3",
     "astro": "5.2.1",
+    "bcrypt": "^5.1.1",
     "color": "^4.2.3",
     "drizzle-orm": "^0.38.3",
     "lucia": "^3.2.2",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/bcrypt": "^5.0.2",
     "@types/color": "^4.2.0",
     "@types/redis": "^4.0.11",
     "daisyui": "^4.12.23",
