--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.1.1",
     "color": "^4.2.3",
     "drizzle-orm": "^0.38.3",
+    "gsap": "^3.12.7",
     "lucia": "^3.2.2",
     "moment": "^2.30.1",
     "react": "^19.0.0",
