--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "6.0.0",
     "@astrojs/vercel": "8.0.5",
     "@libsql/client": "^0.14.0",
+    "@nanostores/react": "^0.8.4",
     "@splidejs/splide": "^4.1.4",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
@@ -29,6 +30,7 @@
     "gsap": "^3.12.7",
     "lucia": "^3.2.2",
     "moment": "^2.30.1",
+    "nanostores": "^0.11.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^4.7.0",
